--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -11,7 +11,11 @@ env:
   node: true
   jest: true
 
+parserOptions:
+  ecmaVersion: 2020
+
 rules:
+  no-underscore-dangle: [2, { "allow": ["__filename", "__dirname"] }] # разрешает подчёркивание в именах только для двух констант
   no-console: 0
   import/extensions: 0
   new-cap:
