--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "Test task for RegionConsult",
   "main": "index.js",
   "scripts": {
-    "test": "jest --colors "
+    "test": "jest --colors"
   },
   "repository": {
     "type": "git",
@@ -17,6 +17,17 @@
     "url": "https://github.com/eKulshan/regionConsult/issues"
   },
   "homepage": "https://github.com/eKulshan/regionConsult#readme",
+  "dependencies": {
+    "fastify": "^3.10.1",
+    "fastify-formbody": "^5.0.0",
+    "fastify-reverse-routes": "^2.0.0",
+    "i18next": "^19.8.4",
+    "lodash": "^4.17.20",
+    "pino-pretty": "^4.3.0",
+    "point-of-view": "^4.8.0",
+    "pug": "^3.0.0",
+    "qs": "^6.9.6"
+  },
   "devDependencies": {
     "eslint": "^7.14.0",
     "eslint-config-airbnb-base": "^14.2.1",
@@ -25,9 +36,5 @@
     "jest": "^26.6.3",
     "jest-cli": "^26.6.3",
     "nodemon": "^2.0.7"
-  },
-  "dependencies": {
-    "fastify": "^3.10.1",
-    "pino-pretty": "^4.3.0"
   }
 }
