--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -20,5 +20,5 @@ jobs:
       run: make install
     - name: Run linter
       run: make lint
-    # - name: Run tests
-    #   run: make test
+    - name: Run tests
+      run: make test
