--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "Test task for RegionConsult",
   "main": "index.js",
   "scripts": {
-    "test": "jest --colors"
+    "test": "NODE_OPTIONS=--experimental-vm-modules npx jest"
   },
   "repository": {
     "type": "git",
