--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
   "name": "regionconsult",
   "version": "1.0.0",
-  "type": "module",
   "description": "Test task for RegionConsult",
-  "main": "index.js",
+  "main": "",
   "scripts": {
-    "test": "NODE_OPTIONS=--experimental-vm-modules npx jest"
+    "test": "jest --colors"
   },
   "repository": {
     "type": "git",
@@ -19,9 +18,14 @@
   "homepage": "https://github.com/eKulshan/regionConsult#readme",
   "dependencies": {
     "fastify": "^3.10.1",
+    "fastify-error-page": "^4.0.0",
     "fastify-formbody": "^5.0.0",
+    "fastify-method-override": "^1.5.3",
     "fastify-objectionjs": "^0.3.0",
+    "fastify-passport": "^0.2.0",
     "fastify-reverse-routes": "^2.0.0",
+    "fastify-secure-session": "^2.3.0",
+    "fastify-sensible": "^3.1.0",
     "i18next": "^19.8.4",
     "knex": "^0.21.15",
     "lodash": "^4.17.20",
@@ -34,12 +38,20 @@
     "sqlite3": "^5.0.0"
   },
   "devDependencies": {
+    "@babel/cli": "^7.12.8",
+    "@babel/core": "^7.12.9",
+    "@babel/node": "^7.12.6",
+    "@babel/preset-env": "^7.12.7",
+    "@jest/globals": "^26.6.2",
+    "babel-eslint": "^10.1.0",
+    "babel-jest": "^26.6.3",
+    "babel-loader": "^8.2.2",
     "eslint": "^7.14.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jest": "^24.1.3",
     "jest": "^26.6.3",
     "jest-cli": "^26.6.3",
-    "nodemon": "^2.0.7"
+    "nodemon": "^2.0.6"
   }
 }
