improve users tests & add session tests

--- a/package.json
+++ b/package.json
@@ -6,6 +6,14 @@
   "scripts": {
     "test": "jest --colors"
   },
+  "engines": {
+    "node": "14.x"
+ },
+ "jest": {
+    "modulePathIgnorePatterns": [
+       "<rootDir>/__tests__/helpers/"
+    ]
+ },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/eKulshan/regionConsult.git"
